--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,14 @@ android {
         androidTest.java.srcDirs += "src/test-common/java"
         test.java.srcDirs += "src/test-common/java"
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -69,8 +72,13 @@ dependencies {
 
 
     // -------- MOCKITO
-    def mockito_version = "2.19.0"
-    testImplementation "org.mockito:mockito-core:$mockito_version"
+    // def mockito_version = "2.19.0"
+    def nahaarman_mockito_version = "2.2.0"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+
+    //MOCKK
+    testImplementation "io.mockk:mockk:1.9.3"
+
 
     // Dagger
     def dagger_version = "2.22"
@@ -112,6 +120,10 @@ dependencies {
     // RxAndroid
     def rxandroid_version = '2.1.1'
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
+    // -------- MOCKITO
+    def mockito_version = "2.19.0"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 
 
 }
